--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,6 +17,14 @@ ja:
         image: 画像
         created_at: 登録日時
         updated_at: 更新日時
+      user:
+        id: ID
+        name: 名称
+        admin: 管理者権限
+        password: パスワード
+        password_confirmation: パスワード(確認)
+        created_at: 登録日時
+        updated_at: 更新日時
   date:
     abbr_day_names:
     - 日
